feat: write validator data request with playground/validator/v10
